--- a/EOS-aurora-sddm/theme.conf
+++ b/EOS-aurora-sddm/theme.conf
@@ -1,3 +1,3 @@
 [General]
-background=background.png
-logo=resources/logo.png
+background=/usr/share/endeavouros/backgrounds/endeavouros-wallpaper.png
+logo=/usr/share/endeavouros/EndeavourOS-icon.png
